--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "main": "./main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron main.js"
   },
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "electron-config": "^0.2.1",
+    "electron-reload": "^1.1.0",
+    "jquery": "^3.1.1",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
-  },
-  "devDependencies": {
-    "cheerio": "^0.22.0"
   }
 }
