--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "electron-config": "^0.2.1",
     "electron-reload": "^1.1.0",
     "jquery": "^3.1.1",
+    "markdown": "^0.5.0",
     "request": "^2.79.0",
     "request-promise": "^4.1.1"
   }
