--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "electron": "^1.4.15",
     "electron-config": "^0.2.1",
     "electron-reload": "^1.1.0",
     "jquery": "^3.1.1",
